--- a/sass/composants/_header.scss
+++ b/sass/composants/_header.scss
@@ -1,12 +1,13 @@
 .header {
     display: flex;
-    justify-content: space-between;
-    width: 80%;
-    max-width: 950px;
+    width: 100%;
+    max-width: 962px;
     flex-wrap: wrap;
+    justify-content: space-between;
   }
-  @media (max-width: 1350px) {
+  @media (max-width: 1370px) {
     .header {
+      flex-direction: column;
       width: 100%;
       max-width: 100%;
     }
