--- a/sass/layout/_photographes.scss
+++ b/sass/layout/_photographes.scss
@@ -3,20 +3,18 @@
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: space-around;
+    margin-top: 80px;
+    width: 102%;
+  }
+  .photographe_link{
+    display: flex;
+    flex-direction: column;
   }
   .photographe_container{
       width: 33%;
       display: flex;
       flex-direction: column;
       margin-bottom: 45px;
-      img {
-        float: left;
-        width:  150px;
-        height: 150px;
-        object-fit: cover;
-        border-radius: 50%;
-        margin: auto;
-      }
       p{
           margin: 0px;
       }
@@ -31,23 +29,58 @@
           margin: auto;
       }
       .tags{
-        color: $color_primary;
-        text-decoration: none;
-        font-size: 0.75rem;
-        font-weight: 500;
-        border: 0.1rem solid $color_bord_tag;
-        border-radius: 1rem;
-        padding: 0.3rem 0.5rem;
-        margin: 1rem 0.2rem 0 0.2rem;
+        display: flex;
+        flex-direction: row;
         margin: auto;
+        padding: 0px;
+        li{
+          color: $color_primary;
+          text-decoration: none;
+          font-size: 0.75rem;
+          font-weight: 500;
+          border: 0.1rem solid $color_bord_tag;
+          border-radius: 1rem;
+          padding: 0.3rem 0.5rem;
+          margin: 1rem 0.2rem 0 0.2rem;
+        }
       }
       .price{
           margin: auto;
           color: $color_price;
           font-size: x-small;
+          margin-top: 4px;
+          margin-bottom: 6px;
       }
       .tagLine{
         margin: auto; 
         font-size: x-small;
       }
   }
+  .photographe_portrait {
+    float: left;
+    width: 250px;
+    height: 250px;
+    object-fit: cover;
+    border-radius: 50%;
+    margin: auto;
+  }
+  @media (max-width: 1024px){
+    #photographes_container {
+      flex-wrap: wrap;
+    } 
+    .photographe_container {
+      width: 50%;
+    }
+  }
+  @media (max-width: 667px){
+    .photographe_container {
+      width: 100%;
+  }
+  #photographes_container {
+    flex-wrap: wrap;
+    display: contents;
+    display: flex;
+    flex-direction: column;
+    align-content: center;
+  }
+}
