--- a/sass/main.scss
+++ b/sass/main.scss
@@ -6,3 +6,10 @@
 @import "./composants/main_title";
 @import "./layout/photographes";
 @import "./layout/banner";
+@import "./layout/media";
+@import "./layout/menu";
+@import "./layout/modal";
+@import "./layout/priceAndLikes";
+@import "./layout/lightBox";
+
+
