--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -8,3 +8,4 @@ $color_bord_tag: #c4c4c4;
 $color_bg_photographe: #fafafa;
 $color_words_photographe: #525252;
 $color_modal_font:#312E2E;
+$color_price_totalLikes: #DB8876
