--- a/sass/layout/_banner.scss
+++ b/sass/layout/_banner.scss
@@ -57,7 +57,7 @@
         margin-top: 16px;
     }
 }
-#contactButton{
+#contactButtonDesktop{
     position: absolute;
     left: 46%;
     top: 166px;
@@ -71,8 +71,16 @@
     display: block;
     font-size: 17px;
     font-weight: 400;
+    cursor: pointer;
   }
-
+  #contactButtonPhone {
+    display: none !important;
+}
+@media  (max-width: 818px) and (min-width: 771px){
+    #contactButtonDesktop{
+        top: 227px;
+    }
+}
 @media (max-width: 770px) {
     #banner_photographe_container{
         background-color: $color_white;
@@ -112,12 +120,22 @@
             height: 110px;
         }
     }
-    #contactButton {
+    #contactButtonPhone {
+        display: block !important;
         position: fixed;
         top: 10%;
-        margin-left: -53px;
+        margin-left: 110px;
         height: 23px;
         z-index: 1;
+        background-color: $color_primary;
+        color: $color_white;
+        font-size: 17px;
+        font-weight: 400;
+        border-radius: 5px;
+        border: none;
+    }
+    #contactButtonDesktop{
+        display: none;
     }
 
 }
