--- a/sass/layout/_menu.scss
+++ b/sass/layout/_menu.scss
@@ -16,6 +16,7 @@
     border: none;
     border-radius: 0.31rem;
     color: $color_white;
+    cursor: pointer;
     .dropdown_list{
       background-color: $color_primary;
     }
