--- a/sass/layout/_lightBox.scss
+++ b/sass/layout/_lightBox.scss
@@ -1,5 +1,4 @@
-.container-modal {
-}  
+
 #lightbox_modal {
     display: none;
     position: fixed;
@@ -13,18 +12,30 @@
     .modal_body {
         text-align: center;
     }
-    .current_media {
-        object-fit: fill;
-        width: 816px;
-        height: 715px;
-        margin-top: 35px;
-        border-radius: 5px;
+    .img_title_lightbox{
+        display: flex;
+        flex-direction: column;
+        position: relative;
+        padding: 0;
+        .current_media {
+            object-fit: fill;
+            padding-top: 47px;
+            height: 698px;
+            width: 54%;
+            margin: auto;
+            border-radius: 5px;
+        }
+        .media-title{
+            color: $color_primary;
+            position: absolute;
+            bottom: -20px;
+            left: 23%;
+        }
     }
-
     .close_modal_media{
         position: absolute;
-        top: 5%;
-        right: 11%;
+        top: 6%;
+        right: 19%;
         font-size: 50px;
         font-weight: lighter;
         color: $color_primary;    
@@ -32,22 +43,18 @@
     .fa-chevron-right{
         position: absolute;
         top: 50%;
-        right: 11%;
+        right: 19%;
         color: $color_primary;
         font-size: 50px;
     }
     .fa-chevron-left{
         position: absolute;
         top: 50%;
-        left: 11%;
+        left: 19%;
         color: $color_primary;
         font-size: 50px;  
     }
-    .media-title{
-        color: $color_primary;
-        padding-right: 673px;
-        margin: 0px;
-    }
+
 }
 @media  (max-width: 818px) and (min-width: 771px){
     #lightbox_modal{
@@ -62,25 +69,41 @@
 }
 @media (max-width: 667px){
     #lightbox_modal{
+       .img_title_lightbox{
+           display: flex;
+           flex-direction: column;
+           position: relative;
+           width: 287px;
+           padding: 0;
+           margin: auto;
         .current_media {
             object-fit: fill;
             width: 287px;
-            height: 276px;
+            height: 291px;
             margin: auto;
-            margin-top: 205px;
+            margin-top: 242px;
+            padding-top: 0;
         }
+        .media-title{
+            margin-left: 0;
+            position: absolute;
+            top: 98%;
+            left: 0%;
+        }
+       }
         .close_modal_media{
-            top: 30%;
-            right: 7%;
+            top: 32%;
+            right: 4%;
             font-size: 19px;
         }
         .fa-chevron-right{
-            right: 7%;
+            right: 5%;
             font-size: 24px;
         }
         .fa-chevron-left{
-            left: 7%;
+            left: 4%;
             font-size: 24px;
         }
+
     } 
 }
