--- a/sass/layout/_menu.scss
+++ b/sass/layout/_menu.scss
@@ -1,6 +1,7 @@
 .sortBy {
     margin-top: 2rem;
     margin-bottom: 45px;
+    max-width: fit-content;
   }
   
   .sortby_label {
@@ -89,3 +90,4 @@
       display: none;
     }
   }
+ 
