--- a/sass/layout/_lightBox.scss
+++ b/sass/layout/_lightBox.scss
@@ -20,8 +20,8 @@
         .current_media {
             object-fit: fill;
             padding-top: 47px;
-            height: 698px;
-            width: 54%;
+            height: 735px;
+            width: 52%;
             margin: auto;
             border-radius: 5px;
         }
@@ -29,7 +29,7 @@
             color: $color_primary;
             position: absolute;
             bottom: -20px;
-            left: 23%;
+            left: 24%;
         }
     }
     .close_modal_media{
@@ -56,18 +56,35 @@
     }
 
 }
-@media  (max-width: 818px) and (min-width: 771px){
+@media (max-width:768px) and (max-height:1024px){
     #lightbox_modal{
-        .current_media {
-            width: 516px;
-            height: 415px;
+        .img_title_lightbox{
+            position: relative;
+           .current_media {
+            height: 404px;
+            width: 79%;
+            margin-top: 32%;
+           }
+           .media-title{
+             margin-left: 0;
+             position: absolute;
+             top: 100%;
+             left: 10.8%;
+            }
         }
-        .media-title{
-            padding-right: 327px;
+        .close_modal_media{
+            top: 30%;
+            right: 4%;
         }
-    }    
+        .fa-chevron-right{
+            right: 4%;
+        }
+        .fa-chevron-left{
+            left: 4%;
+        }
 }
-@media (max-width: 667px){
+
+@media (max-width:375px) and (max-height:677px){
     #lightbox_modal{
        .img_title_lightbox{
            display: flex;
@@ -76,20 +93,17 @@
            width: 287px;
            padding: 0;
            margin: auto;
-        .current_media {
-            object-fit: fill;
-            width: 287px;
-            height: 291px;
-            margin: auto;
-            margin-top: 242px;
-            padding-top: 0;
-        }
-        .media-title{
+          .current_media {
+            height: 272px;
+            width: 102%;
+            margin-top: 53%;
+          }
+          .media-title{
             margin-left: 0;
             position: absolute;
             top: 98%;
             left: 0%;
-        }
+           }
        }
         .close_modal_media{
             top: 32%;
@@ -106,4 +120,37 @@
         }
 
     } 
+}
+@media (max-width:677px) and (max-height:375px){
+    #lightbox_modal{
+        .img_title_lightbox{
+            display: flex;
+            flex-direction: column;
+            position: relative;
+            width: 287px;
+            padding: 0;
+            margin: auto;
+           .current_media {
+             height: 272px;
+             width: 102%;
+           }
+           .media-title{
+            left: 0%;
+           }
+        }
+         .close_modal_media{
+            top: 17%;
+            right: 22%;
+            font-size: 19px;
+         }
+         .fa-chevron-right{
+            right: 21%;
+             font-size: 24px;
+         }
+         .fa-chevron-left{
+             left: 22%;
+             font-size: 24px;
+         }
+}
+}
 }
