--- a/sass/layout/_menu.scss
+++ b/sass/layout/_menu.scss
@@ -50,6 +50,7 @@
   padding: 13px 16px;
   border: 1px solid transparent;
   border-color: transparent transparent rgba(0, 0, 0, 0.1) transparent;
+  border-top-color: white;
   cursor: pointer;
   user-select: none;
   width: 141px;
