--- a/sass/layout/_banner.scss
+++ b/sass/layout/_banner.scss
@@ -70,7 +70,7 @@
     cursor: pointer;
   }
   #contactButtonPhone {
-    display: none !important;
+    display: none;
 }
 @media  (max-width: 913px) and (min-width: 771px){
     #contactButtonDesktop{
@@ -118,10 +118,10 @@
         }
     }
     #contactButtonPhone {
-        display: block !important;
+        display: block;
         position: fixed;
         top: 89%;
-        left: 33%;
+        left: 40%;
         height: 23px;
         z-index: 1;
         background-color: $color_primary;
@@ -134,5 +134,9 @@
     #contactButtonDesktop{
         display: none;
     }
-
+}
+@media (max-width: 375px) {
+    #contactButtonPhone{
+        left: 33%;
+    }
 }
