--- a/sass/layout/_media.scss
+++ b/sass/layout/_media.scss
@@ -48,12 +48,22 @@
     top: 89%;
     right: 0%;
   }
+  #medias_photographe:after {
+    content: '';
+    flex-grow: 0;
+    width: 30rem;
+  }
   @media (max-width: 1599px) and (min-width:1120px){
     #medias_photographe {
       .media {
         width: 24rem;
       }
   } 
+  #medias_photographe:after {
+    content: '';
+    flex-grow: 0;
+    width: 24rem;
+  }
   }
   @media (max-width: 1313px) and (min-width:819px){
     #medias_photographe {
@@ -67,7 +77,7 @@
     top: 91%;
   }
 }
-  @media  (max-width: 818px) and (min-width: 771px){
+@media  (max-width: 771px){
     #medias_photographe {
         justify-content: center;
         margin-top: 10%;
@@ -76,7 +86,6 @@
   @media (max-width: 667px){
     #medias_photographe{
         display: flex;
-        flex-direction: column;
         .media {
           width: 21rem;
           height: 12rem;
@@ -90,10 +99,8 @@
     }
   }
 
-  @media (min-width: 667px){
+  @media (min-width: 667px) and (max-width: 1313px) {
     #medias_photographe:after {
-      content: '';
-      flex-grow: 0;
-      width: 30rem;
+      content: none;
     }
   }
